# CPP_TECHNOLOGY

./: README.md
A.HW1/: guide.txt
B.HW2/: here.cpp
C.HW3/: bye.cpp  hello.cpp  main.cpp  makefile  mylib.h
D.HW4/: about_the_task
D.HW4/B/: B.cpp
D.HW4/C/: C.cpp
D.HW4/D/: D.cpp
D.HW4/E/: E.cpp
D.HW4/F/: F.cpp
D.HW4/G/: G.cpp
D.HW4/H/: H.cpp
D.HW4/I/: I.cpp
E.HW5/: 27.03.cpp  getline.cpp  mylib4Hw5.h  resize.cpp  swap_min.cpp
F.HW6/: String.cpp  String.h  main.cpp
G.HW7/HW7_1/: CMakeLists.txt  Driver.cpp  Driver.h  PlaneFigure.cpp  PlaneFigure.h  Rect.cpp  Rect.h  main.cpp
G.HW7/HW7_2/: CMakeLists.txt  main.cpp
G.HW7/HW7_3/: CMakeLists.txt  Date.cpp  Date.h  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp
H.HW8/HW8/: AbstractEventOrCause.h  Budget.cpp  Budget.h  CEO.cpp  CEO.h  CMakeLists.txt  Cause.cpp  Cause.h  Department.cpp  Department.h  Director.cpp  Director.h  Employee.cpp  Employee.h  Event.cpp  Event.h  FundRaisingDepartment.cpp  FundRaisingDepartment.h  FundsBalance.cpp  FundsBalance.h  GrandDepartment.cpp  GrandDepartment.h  InterfacePrint.h  Office.cpp  Office.h  Secretary.cpp  Secretary.h  Trust.cpp  Trust.h  main.cpp
H.HW8/HW8UML/: CMakeLists.txt  Employee.cpp  Employee.h  PrintDetails.h
I.HW9/: CMakeLists.txt  Fraction.cpp  Fraction.h  HW9  main.cpp
J.HW10/: Array.h  ArrayImpl.hpp  Vector.cpp  Vector.h  about_the_task  main.cpp
